# Hybrid-RAG-Assistant

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.py  test_database.py  test_env.py  test_full_rag.py  test_parser.py  test_retri.py
app/: config.py  database.py  llm_chain.py  parser.py  retriever.py  ui.py
